syntax = "proto3";

package protos;

message CredentialInfo {
    string Access = 1;
    string Secret = 2;
    string MembershipID = 3;
    string CreatedAt = 4;
    string UpdatedAt = 5;
}

message CredUserGroupInput {
    string UserID = 1;
    string GroupID = 2;
}

message CredentialJoinMembership {
    string  Access = 1;
    string  Secret = 2;
    string  MembershipID = 3;
    string  GroupID= 4;
    string  UserID = 5;
}

message Access {
    string Key = 1;
}